--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: © 2020 Open Networking Foundation <support@opennetworking.org>
 # SPDX-License-Identifier: Apache-2.0
-aiohttp>=3.5.4,<4.0
+aiohttp>=3.5.4,<=3.7.4.post0
 aiohttp-swagger>=1.0.9,<2.0
 betterproto>=2.0.0b3,<3.0
 onos-api>=0.7.49
